maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:5: error: type mismatch;
 found   : (Int, Int)
 required: Int
  var sortie : Int = chercherSortie(largeur, hauteur)
                                   ^JediEscaper:56: error: type mismatch;
 found   : Int
 required: (Int, Int)
      if (aBiscuit(x, y)){return (x + y)}
                                    ^JediEscaper:59: error: type mismatch;
 found   : Int(19998)
 required: (Int, Int)
  return (9999 + 9999)
               ^